# network-traffic-prediction

./: .gitignore  CMakeLists.txt  COPYING  README.md
client/: CMakeLists.txt  client.sh  client_batch.sh
client/include/: modelproxy.h  neuralproxy.h  outputwriter.h  parsedopts.h  predictionclient.h
client/src/: main.cpp  modelproxy.cpp  neuralproxy.cpp  outputwriter.cpp  predictionclient.cpp
models/: CMakeLists.txt
models/include/: modelbase.h  util.h
models/include/arima/: arima.h
models/include/chaos/: chaos.h
models/include/comm/: connection.h  protocol.h
models/include/dataprovider/: dataprovider.h  multidataprovider.h
models/include/grey/: grey.h
models/include/neural/: activationfunction.h  inputlayer.h  layer.h  netserializer.h  neuralnet.h  neuron.h  outputlayer.h
models/src/: util.cpp
models/src/arima/: arima.cpp
models/src/chaos/: chaos.cpp
models/src/comm/: protocol.cpp
models/src/dataprovider/: dataprovider.cpp  multidataprovider.cpp
models/src/grey/: grey.cpp
models/src/neural/: activationfunction.cpp  inputlayer.cpp  layer.cpp  netserializer.cpp  neuralnet.cpp  neuron.cpp  outputlayer.cpp
server/: CMakeLists.txt  servers.sh
server/include/: parsedopts.h  predictionserver.h
server/src/: main.cpp  predictionserver.cpp
